# metamemory

./: .gitignore  CMakeLists.txt
include/: metamem_pch.h
src/cuda/: mem_cuda.c  xfer_cuda.c
src/hip/: mem_hip.c  xfer_hip.c
src/posix/: mem_posix.c  xfer_posix.c
tests/cuda/: 00_vector_add.cu  01_vector_add.cu  02_vector_add.cu  03_vector_add.cu
tests/hip/: 00_vector_add.cpp  01_vector_add.cpp
tests/posix/: 00_vector_add.c  01_vector_add.c  02_vector_add.c  03_vector_add.c
